WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105594
Set timer coalescing policy for WebKit2 processes on Mac until process visible assertion handles it automatically
https://bugs.webkit.org/show_bug.cgi?id=105594
Summary
Set timer coalescing policy for WebKit2 processes on Mac until process visibl...
Kiran Muppala
Reported
2012-12-20 18:01:37 PST
WebKit removed setting timer coalescing policy for WebKit2 processes on Mac as part of
https://bugs.webkit.org/show_bug.cgi?id=105378
, which added a process visible assertion. However that is not correctly setting the policy due to <
rdar://problem/12822683
> and <
rdar://problem/12905398
>. Hence WebKit should continue setting the QoS tier until those two are fixed.
Attachments
Patch
(2.02 KB, patch)
2012-12-20 18:05 PST
,
Kiran Muppala
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kiran Muppala
Comment 1
2012-12-20 18:01:51 PST
<
rdar://problem/12921884
>
Kiran Muppala
Comment 2
2012-12-20 18:05:25 PST
Created
attachment 180450
[details]
Patch
WebKit Review Bot
Comment 3
2012-12-20 18:36:56 PST
Comment on
attachment 180450
[details]
Patch Clearing flags on attachment: 180450 Committed
r138336
: <
http://trac.webkit.org/changeset/138336
>
WebKit Review Bot
Comment 4
2012-12-20 18:36:59 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug