Set timer coalescing policy for WebKit2 processes on Mac until process visible assertion handles it automatically https://bugs.webkit.org/show_bug.cgi?id=105594

Patch by Kiran Muppala <cmuppala@apple.com> on 2012-12-20
Reviewed by Mark Rowe.

* Shared/mac/ChildProcessMac.mm:
(WebKit::initializeTimerCoalescingPolicy): Set task_latency and task_throughput QOS tiers as appropriate
for visible applications.
(WebKit::ChildProcess::platformInitialize): Add call to initializeTimerCoalescingPolicy.

Canonical link: https://commits.webkit.org/123822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138336 268f45cc-cd09-0410-ab3c-d52691b4dbfc